# aplan

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  pyproject.toml
config/: strategy.toml  validation_protocol.lock.json  validation_protocol.toml
content/: README.md  brand_rules.md  calendar.md  publishing_checklist.md
content/feedback/: README.md  template.md
content/posts/: 2026-07-07-why-not-stock-picker.md
content/wechat/: 2026-07-07-why-not-stock-picker.md
content/xiaohongshu/: 2026-07-07-why-not-stock-picker.md  card_prompts.md
data/: README.md
docs/: _config.yml  architecture.md  cloud_run.md  disclaimer.md  index.html  local_run.md  project_intro.md  public_roadmap.md  research_funnel.md  research_log_001.md  styles.css  validation_protocol.md
scripts/: cloud_backfill_data.sh  cloud_bootstrap.sh  cloud_daily.sh  cloud_update.sh  cloud_yinhe_daily.sh  send_mail.applescript
src/aplan/: __init__.py  audit.py  (+44 more)
tests/: test_akshare_sync.py  test_announcement_fulltext.py  test_announcements.py  test_audit.py  test_buy_entry_validation.py  test_core.py  test_daily_report.py  test_email_notify.py  test_exit_rules.py  test_factor_lab.py  test_observations.py  test_paper.py  test_paper_watch.py  test_pretrade.py  test_quality.py  test_research_backtest.py  test_research_funnel.py  test_research_workflow.py  test_risk.py  test_strategy.py  test_tushare.py  test_validation_protocol.py  test_yinhe_acceptance.py  test_yinhe_adjustment.py  test_yinhe_price_baseline.py  test_yinhe_security_history.py  test_yinhe_sync.py
(+9 files in other folders)
