[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aplan"
version = "0.1.0"
description = "可审计的 A 股多周期研究与选股框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aplan = "aplan.cli:main"
aplan-sync = "aplan.sync:main"
aplan-backtest = "aplan.research_backtest:main"
aplan-validate = "aplan.second_round:main"
aplan-horizons = "aplan.horizon_validation:main"
aplan-daily = "aplan.daily_workflow:main"
aplan-strategies = "aplan.strategy_cli:main"
aplan-portfolio = "aplan.portfolio:main"
aplan-audit = "aplan.audit:main"
aplan-paper = "aplan.paper:main"
aplan-announcements = "aplan.announcements:main"
aplan-fulltext = "aplan.announcement_fulltext:main"
aplan-email = "aplan.email_notify:main"
aplan-evidence-validate = "aplan.evidence_validation:main"
aplan-evidence-coverage = "aplan.evidence_coverage:main"
aplan-akshare = "aplan.akshare_sync:main"
aplan-yinhe = "aplan.yinhe_sync:main"
aplan-research = "aplan.research_workflow:main"
aplan-observe = "aplan.observations:main"
aplan-exit-review = "aplan.exit_rules:main"
aplan-factor-lab = "aplan.factor_lab:main"

[project.optional-dependencies]
pdf = ["pypdf>=5"]
akshare = ["akshare>=1.18"]

[tool.setuptools.packages.find]
where = ["src"]
